# blitz-api-py

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  pr-title.yml  release.yml
docs/: CONTEXT.md
examples/: async_quickstart.py  quickstart.py
openapi/: enum-source.json
scripts/: gen_enums.py  gen_sync.py
src/blitz_api/: __init__.py  _base_client.py  _client.py  _client_async.py  _client_sync.py  _compat.py  _constants.py  _exceptions.py  _pagination_async.py  _pagination_base.py  _pagination_sync.py  _rate_limit.py  _rate_limit_async.py  _rate_limit_sync.py
src/blitz_api/resources/: __init__.py  account.py  enrichment.py  search.py  utils.py
src/blitz_api/resources/_async/: __init__.py  account.py  enrichment.py  search.py  utils.py
src/blitz_api/resources/_sync/: __init__.py  account.py  enrichment.py  search.py  utils.py
src/blitz_api/types/: __init__.py  _models.py  account.py  enrichment.py  enums.py  filters.py  search.py  shared.py  utils.py
tests/: conftest.py  data.py  test_client.py  test_enums.py  test_exceptions.py  test_gen_enums.py  test_gen_sync.py  test_models.py  test_rate_limit.py  test_retry.py
tests/resources/: test_endpoints.py  test_pagination.py
