[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blitz-api-py"
dynamic = ["version"]
description = "Typed Python SDK for the Blitz API — B2B data, search, and enrichment."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Blitz API", email = "founders@blitz-api.ai" }]
keywords = ["blitz", "blitz-api", "b2b", "enrichment", "linkedin", "sales", "gtm", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28,<1",
    "pydantic>=2.13,<3",
    "typing-extensions>=4.10",
]

[project.urls]
Homepage = "https://blitz-api.ai"
Documentation = "https://docs.blitz-api.ai"
Repository = "https://github.com/api-blitz/blitz-api-py"
Issues = "https://github.com/api-blitz/blitz-api-py/issues"
Changelog = "https://github.com/api-blitz/blitz-api-py/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "ruff>=0.15",
    "mypy>=2.1",
    "pyright>=1.1.390",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.35",
    "pytest-cov>=6.0",
    "tokenize-rt>=6.2.0",
]

[tool.hatch.version]
path = "src/blitz_api/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/blitz_api"]

[tool.hatch.build.targets.sdist]
include = ["src/blitz_api", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts", "examples"]
target-version = "py310"
# Machine-generated modules own their own formatting (a drift guard verifies them);
# keep ruff from reformatting them. mypy/pyright still type-check them.
#   - types/enums.py            <- scripts/gen_enums.py
#   - *_sync.py + _sync/        <- scripts/gen_sync.py (transliterated from the async source)
extend-exclude = [
    "src/blitz_api/types/enums.py",
    "src/blitz_api/_client_sync.py",
    "src/blitz_api/_pagination_sync.py",
    "src/blitz_api/_rate_limit_sync.py",
    "src/blitz_api/resources/_sync",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "PIE", "RUF"]
# RUF022: __all__ is intentionally grouped by category, not alphabetized.
ignore = ["RUF022"]

[tool.ruff.lint.per-file-ignores]
# RUF012: `= []` defaults are safe on Pydantic models (deep-copied per instance)
# and keep pyright strict happy (it infers the type from the field annotation).
"src/blitz_api/types/*.py" = ["RUF012"]
"src/blitz_api/_pagination_async.py" = ["RUF012"]

[tool.ruff.lint.isort]
known-first-party = ["blitz_api"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
warn_redundant_casts = true
plugins = ["pydantic.mypy"]
files = ["src", "tests", "scripts", "examples"]

# tokenize-rt (used only by scripts/gen_sync.py) ships no type stubs.
[[tool.mypy.overrides]]
module = ["tokenize_rt"]
ignore_missing_imports = true

# The `# type: ignore[override]` on the page __aiter__ is unused in the async source
# (BaseModel has no __aiter__) but required in the generated sync twin's __iter__.
[[tool.mypy.overrides]]
module = ["blitz_api._pagination_async"]
warn_unused_ignores = false

[tool.pyright]
include = ["src", "tests", "examples"]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
# Resources intentionally call the client's internal `_request` across modules;
# this is internal encapsulation, not a public-API typing concern (mypy allows it).
reportPrivateUsage = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.coverage.run]
source = ["blitz_api"]
branch = true
